<resources>
    <string name="app_name">MobilApp</string>
    <string name="registro_title">Registro</string>
    <string name="registrar_btn">Registrar</string>
    <string name="contrase_a_text">Contraseña</string>
    <string name="email_text">Usuario o Email</string>
    <string name="inicio_sesion">Inicio de Sesión</string>
    <string name="link_iniciar_sesion">Iniciar Sesión</string>
    <string name="bienvenido_a">Bienvenido (a):</string>
</resources>
